# convergio-provisioning

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tarpaulin-report.json
.github/workflows/: ci.yml
crates/convergio-provisioning/: Cargo.toml
crates/convergio-provisioning/src/: ext.rs  lib.rs  mcp_defs.rs  provision.rs  routes.rs  tests.rs  types.rs
docs/adr/: 001-extraction.md
