[workspace]
resolver = "2"
members = ["crates/convergio-provisioning"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "LicenseRef-Convergio-Community"
repository = "https://github.com/Roberdan/convergio-provisioning"

[workspace.dependencies]
# SDK dependencies
convergio-types = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-db = { git = "https://github.com/Roberdan/convergio-db", tag = "v0.1.3" }

# Common deps — pin same versions as SDK for compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util", "process"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
