[package]
name = "convergio-provisioning"
description = "Node provisioning — sync config, keys, binary to remote peers"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository = "https://github.com/Roberdan/convergio-provisioning"
readme = "../../README.md"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
